trying to fix scroll bounce on safari browser

--- a/src/index.css
+++ b/src/index.css
@@ -16,6 +16,8 @@ html {
 body {
   font-family: 'Fira Sans Condensed', sans-serif;
   line-height: 1.5;
+  position: fixed;
+  overflow: hidden;
   overscroll-behavior: none;
   width: 100%;
 }
